# mockAzureFabricGitRepo

./: .env.dev.example  .env.prod.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
data/sample/: README.md  crm_accounts_api_response.json  customers.csv  products.json  sales_orders.csv
docs/: architecture.md  data-dictionary.md
docs/runbooks/: pipeline-failure-runbook.md
fabric/lakehouse/: lakehouse.metadata.json
fabric/lakehouse/schemas/bronze/: sales_orders_raw.schema.json
fabric/lakehouse/schemas/silver/: sales_orders_cleansed.schema.json
fabric/notebooks/: nb_eda_sales_analysis.ipynb  nb_transform_silver_sales.ipynb
fabric/pipelines/: ingest_sales_orders.pipeline.json  transform_gold_sales_summary.pipeline.json
fabric/warehouse/: warehouse.metadata.json
infra/bicep/: main.bicep
infra/bicep/parameters/: dev.parameters.json  prod.parameters.json
sql/ddl/: 01_create_schemas.sql  02_dim_customer.sql  03_fact_sales_orders.sql  04_agg_sales_summary.sql
sql/procedures/: usp_refresh_sales_summary.sql
sql/views/: rpt_sales_overview.sql
src/: __init__.py
src/ingestion/: __init__.py  erp_sql_connector.py
src/transforms/: __init__.py  silver_sales_transform.py
src/utils/: __init__.py  fabric_client.py
tests/: conftest.py
tests/integration/: test_fabric_pipeline_integration.py
tests/unit/: test_erp_connector.py  test_silver_sales_transform.py
